Language toggle support

--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -93,6 +93,9 @@
 
     <div class="page gamepage" id="page">
 
+        <img src="../img/dissapointed.png" class="dissapointedpng">
+        <h2 class="dissapointedtext">There's no game yet</h2>
+
         <footer class="gamepagefooter">
             
             <div id="BottomSecTopBar"></div>
