--- a/Website/html/history.html
+++ b/Website/html/history.html
@@ -97,9 +97,9 @@
             <div class="info-text-box-center">
                 <br>
                 <br>
-                <h2 class="info-text-box-title">Our history</h2>
+                <h2 class="info-text-box-title" id="history-title">Our history</h2>
                 <br>
-                <p class="info-text-box-text"> A garage box in Den Haag is the place where the adventure started in 2008, with two friends, Hasan Tasdemir and Pascal Rappailles. 
+                <p class="info-text-box-text" id="itbt-4"> A garage box in Den Haag is the place where the adventure started in 2008, with two friends, Hasan Tasdemir and Pascal Rappailles. 
                 <br>The garage quickly became too small, after which they moved to a warehouse on an industrial estate. Unfortunately, the warehouse was not heated and everything had
                 <br>to be transferred to an empty Ministry of Agriculture in the middle of winter. When this building also had to be cleared out, the then collection of 10 arcade video games was
                 <br>stored with some spare parts in an old showroom for classic cars. Because there was no room to renovate or play with the cabinets, suitable space was looked for.
@@ -118,7 +118,7 @@
                 <br>
                 <h2 class="info-text-box-title">Insert coin</h2>
                 <br>
-                <p class="info-text-box-text"> Soon there were more people who wanted to participate, so that both the location and the hobby approach were no longer sufficient, in addition
+                <p class="info-text-box-text" id="itbt-5"> Soon there were more people who wanted to participate, so that both the location and the hobby approach were no longer sufficient, in addition
                 <br>to everyone's daily work. The initiative was in danger of collapsing because of its success. It was therefore decided by the friends that a professional approach was necessary,
                 <br>and it could no longer be continued as a hobby. In good consultation it was decided that one of the friends, Hasan Tasdemir, would try to develop the concept into a company.
                 <br>The others would support him with advice and deed in their free time. 
@@ -139,7 +139,7 @@
                 <br>
                 <h2 class="info-text-box-title">Extra life</h2>
                 <br>
-                <p class="info-text-box-text"> In 2016 Hasan came in contact with Jan Kragt, City marketer of the municipality of Zoetermeer, who was deeply impressed by the collection, suggested the idea of turning it into a
+                <p class="info-text-box-text" id="itbt-6"> In 2016 Hasan came in contact with Jan Kragt, City marketer of the municipality of Zoetermeer, who was deeply impressed by the collection, suggested the idea of turning it into a
                 <br>museum and setting up a foundation for it. Hasan and Jan came up with the name on the spot and the National Video Game Museum was born. Together with a number of
                 <br>important players from the Dutch game community, the National Videogame Museum Foundation was subsequently established.
                 <br>The municipal council was enthusiastic about the idea and decided to support the museum financially. This made it possible to rent a heated storage facility where the entire collection
@@ -158,7 +158,7 @@
                 <br>
                 <h2 class="info-text-box-title">Continue? Yes!</h2>
                 <br>
-                <p class="info-text-box-text"> From May 2017, a large group of volunteers and fans worked hard to get the pilot of the museum set up so that it was ready to play on December 1, 2017! The enormous influx
+                <p class="info-text-box-text" id="itbt-7"> From May 2017, a large group of volunteers and fans worked hard to get the pilot of the museum set up so that it was ready to play on December 1, 2017! The enormous influx
                 <br>of enthusiastic visitors and the many positive reactions to our museum speak for themselves.
                 <br>The National Video Game Museum has now become a great success, thanks in part to the tireless efforts of all our employees and volunteers.
                 <br>
@@ -174,7 +174,7 @@
                 <br>
                 <h2 class="info-text-box-title">Level up</h2>
                 <br>
-                <p class="info-text-box-text"> We are now busy enlarging the museum, deepening the experience and strengthening the museological and educational value of our beautiful museum.
+                <p class="info-text-box-text" id="itbt-8"> We are now busy enlarging the museum, deepening the experience and strengthening the museological and educational value of our beautiful museum.
                 <br>We are doing everything we can to further professionalize the museum and prepare it for the next 'level' at a permanent and definitive location.
                 <br>And our ambition goes much further, because we want the National Videogame Museum to grow into a total concept, including:
                 <br>•	a National Game Knowledge Centre;
