fixed image sizing

--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -100,9 +100,9 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                   <!-- Slides -->
-                  <div class="swiper-slide"><img src="../img/Museum_Image5.jpg"></div>
-                  <div class="swiper-slide"><img src="../img/Museum_Image6.jpg"></div>
-                  <div class="swiper-slide"><img src="../img/Museum_Image7.jpg"></div>
+                  <div class="swiper-slide"><img src="../img/Museum_Image5.png"></div>
+                  <div class="swiper-slide"><img src="../img/Museum_Image6.png"></div>
+                  <div class="swiper-slide"><img src="../img/Museum_Image7.png"></div>
                   <div class="swiper-slide"><img src="../img/Museum_Image8.jpg"></div>
                   <div class="swiper-slide"><img src="../img/Museum_Image9.jpg"></div>
                 
@@ -229,6 +229,8 @@
             <!--End pacman animation-->
             
         </footer>
+        <!--Bottom section-->
+
     </div>
 
     <!--End Page-->
