--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -95,7 +95,7 @@
 
     <div class="page gamepage" id="page">
         <h2 class="textbox-title hometitle" id="hometitle">Highlights!</h2>
-        <div class="container">
+        <div class="container2">
             <div class="swiper">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
