--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -94,7 +94,7 @@
     <!--Page-->
 
     <div class="page gamepage" id="page">
-        <h2 class="textbox-title hometitle" id="hometitle">Highlights!</h2>
+        <h2 class="textbox-title hometitle2" id="hometitle2">Highlights!</h2>
         <div class="container2">
             <div class="swiper">
                 <!-- Additional required wrapper -->
