fixed button locations and removed search-bar due to deadline

--- a/Website/html/home.html
+++ b/Website/html/home.html
@@ -62,18 +62,17 @@
                 <h2 id="history-t" class="button-text prevent-select">History</h2>
             </div>
 
+            <div class="highlights gotobutton" id="highlights-button">
+                <div class="button-line" id="highlights-b-line"></div>
+                <h2 id="highlights-t" class="button-text prevent-select">Highlights</h2>
+            </div>
+
             <div class="game gotobutton" id="game-button">
                 <div class="button-line" id="game-b-line"></div>
                 <h2 id="game-t" class="button-text prevent-select">Game</h2>
             </div>
 
         </div>
-
-        <div id="s-bar">
-            <input id="search-input" placeholder="Search..">
-            <img src="../img/search_icon.png" id ="s-icon">
-        </div>
-
         
         <div class="languages">
             <div class="english languagebutton" id="english-button"></div>
