--- a/Website/html/game.html
+++ b/Website/html/game.html
@@ -15,8 +15,6 @@
     <!--places the search icon in the tab-->
     <link rel="icon"  href="../img/icon.png" type="image/x icon">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-
 </head>
 
 <body>
@@ -94,8 +92,8 @@
 
     <div class="page gamepage" id="page">
         <h2 class="textbox-title hometitle2" id="hometitle2">Game</h2>
+        <canvas id="myCanvas" width="480" height="320" background="red"></canvas>
     
-
         <footer class="gamepagefooter">
             
             <div id="BottomSecTopBar"></div>
@@ -125,6 +123,5 @@
     </div>
 
     <!--End Page-->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
 </html>
